# pi3-dev

./: .asoundrc
.codeblocks/: default.conf
.config/autostart/: mjpg_streamer.desktop  nodejs_server.desktop
Desktop/: __api.txt  __git.txt  __linux.txt  git_pi3.sh  rebuild_dlib.sh  rebuild_loadcaffe.sh  rebuild_mjpg_streamer.sh  run_mjpg_streamer.sh  run_nodejs_srv.sh  takepics.sh
Desktop/_gcc/: __exe  __gcc  gcc_DisplayImage.sh  gcc_c_call_java.sh  gcc_c_embedding_py.sh  gcc_c_embedding_py_pure.sh  gcc_eigenFacerec.sh  gcc_preparePhoto.sh  gcc_raspicamFaceDetection.sh  gcc_thread.sh  gcc_usbcamFaceDetection.sh  gcc_videoFacerec.sh
Desktop/_install/: install_RPiCamWebInterface.sh  install_mjpg_streamer.sh  install_pi_1.sh  install_pi_2.sh  install_pi_3.sh  install_pi_4.sh  install_pi_5.sh  install_pi_6.sh
Desktop/tango/inte/: _thread  _thread.cpp  rum.cpp
Desktop/tango/mjpg-streamer-experimental/: CMakeLists.txt  mjpg_streamer.cpp  mjpg_streamer.h
Desktop/tango/remote/: _rum_tcpServer.cpp  _tcpServer.cpp  _webServer.js  _webServer_tcpClient.js  a.html  b.html
Desktop/tango/see/facedet/raspicam/_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  raspicamCap.cpp
Desktop/tango/talk/: _c_embedding_py  _c_embedding_py.cpp  _c_embedding_py_pure  _c_embedding_py_pure.cpp  _c_embedding_py_separate  _c_embedding_py_separate.cpp  _postag.py  _stt_tts_postag.py  buildPocket.sh  cdpocket.sh  pocket.sh  tts_google.py
Desktop/workshop/: mjpg-streamer.cbp
Desktop/workshop/_opencv3.1.0_cmake/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
Desktop/workshop/_server/: _tcpServer  _tcpServer.cpp  a.html  b.html
Desktop/workshop/_test_codeblocks/: _test_codeblocks.cbp  _test_codeblocks.depend  _test_codeblocks.layout  main.cpp
Desktop/workshop/cmake_codeblocks/: CMakeLists.txt  main.c
Desktop/workshop/cmake_opencv/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
Desktop/workshop/cmake_raspicam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  raspicamCap
Desktop/workshop/opencv_dnn/: CMakeLists.txt  IhsorihGoogLeNetObjectRecognizer.h  loadCaffe  loadCaffe.cpp
Desktop/workshop/py/: _call_node.py  _call_node2.py  _call_py.sh  hello_world.py  subprocess  tcpSocketClient.py  tcpSocketServer.py
Downloads/QPULib/Tests/: CMakeLists.txt
Downloads/dlib/examples/: CMakeLists.txt  face_detection_ex.cpp  (+1 more)
(+142 files in other folders)
